<resources>
    <string name="app_name">Quik Pawn</string>
    <string name="name">ชื่อ-สกุล</string>
    <string name="card_id">รหัสประจำตัวประชาชน</string>
    <string name="search">ค้นหา</string>
    <string name="mulct">ค่าปรับ</string>

    <string name="pay_interest">ยอดชำระ %s บาท</string>
    <string name="calendar">กำหนดคืน</string>
    <string name="please_phone_number">กรุณาระบุเบอร์โทร</string>
    <string name="please_address">กรุณาระบุที่อยู่</string>


    <string name="return_item">คืนสินค้า</string>
    <string name="pay_item">ขาย</string>
    <string name="buy_item">ซื้อสินค้า</string>
    <string name="sell_item">ขายสินค้า</string>
    <string name="consignment_item">ขายฝาก</string>
    <string name="interest_item">ต่อดอกเบี้ย</string>
    <string name="redeem_item">ไถ่ถอน</string>
    <string name="borrow_item">ยืมสินค้า</string>
    <string name="select_order">เลือกรายการ</string>
    <string name="msg_search_card_barcode_order">ค้นหาด้วย บัตร ปชช./บาร์โค้ด/เลขที่รายการ</string>
    <string name="msg_confirm_title_order">ยืนยันทำรายการ</string>
    <string name="msg_confirm_print">ยืนยันปริ้น</string>
    <string name="print_80mm">พิมพ์ 80มม</string>
    <string name="print_a5">พิมพ์ A5</string>

    <string name="text_status">สถานะ %s</string>

    <string name="text_order_code">Order: %s</string>
    <string name="list_order">รายการ</string>
    <string name="text_skip">ข้าม</string>
    <string name="text_cancel">ยกเลิก</string>
    <string name="text_ok">ตกลง</string>
    <string name="text_confirm">ยืนยัน</string>
    <string name="dialog_msg_for_shop">สำหรับร้านค้า</string>

    <string name="title_reprint">พิมพ์ซ้ำ</string>
    <string name="please_back_again">กรุณากดอีกครั้งเพื่ออกจากหน้านี้</string>
    <string name="data_missing">ข้อมูลไม่ครบถ้วน</string>
    <string name="please_add_price">กรุณาระบุราคาสินค้า</string>
    <string name="please_add_name">กรุณาระบุชื่อสินค้า</string>
    <string name="please_add_signature">กรุณาระบุลายเซ็น</string>
    <string name="please_add_pay_per_month">กรุณาเลือกเดือนที่ต้องการจ่าย</string>
    <string name="please_add_item">กรุณาเพิ่มสินค้า</string>
    <string name="please_add_photo">กรุณาถ่ายรูปสินค้า</string>
    <string name="please_add_sale_price">กรุณาตั้งราคาขายก่อนทำรายการ</string>
    <string name="wrong_phone_number">เบอร์โทรศัพท์ไม่ถูกต้อง</string>
    <string name="data_is_wrong">ข้อมูลไม่ถูกต้อง</string>

    <string name="summary_price">ราคารวม</string>

    <string name="title_error">เกิดข้อผิดพลาด</string>
    <string name="search_error_please_research">การค้นหาล้มเหลว กรุณาทำรายการใหม่</string>
    <string name="connect_error_please_reorder">การเชื่อมต่อล้มเหลว กรุณาทำรายการใหม่</string>
    <string name="connect_error">การเชื่อมต่อล้มเหลว</string>
    <string name="order_not_found">ไม่พบรายการ</string>

    <string name="upload_error_please_upload_again">การอัพโหลดข้อมูลผิดพลาด กรุณาทำถ่ายรูปใหม่อีกครั้ง</string>
    <string name="delete_tag_key">delete_key</string>
    <string name="sys_install_back_exception">Install Error</string>
    <string name="sys_install_failed">Install Failed</string>
    <string name="sys_install_success">Install Successfully</string>


</resources>
