<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#E2F0D9"
    tools:context=".BuyActivity">
    <Button
        android:id="@+id/btn_ok"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/btn_ok"
        android:text="ตกลง"
        android:textColor="@color/cardview_light_background"
        android:textSize="20dp"
        android:layout_alignParentBottom="true"/>

    <ScrollView
        android:id="@+id/content_scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_ok"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="30dp"
                android:hint="@string/name"
                android:textSize="20dp" />

            <EditText
                android:id="@+id/edt_idcard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:inputType="number"
                android:hint="@string/card_id"
                android:textSize="20dp" />


            <EditText
                android:id="@+id/edt_phonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:hint="@string/please_phone_number"
                android:singleLine="true"
                android:inputType="phone"
                android:textSize="20dp" />

            <LinearLayout
                android:id="@+id/layout_detail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


            </LinearLayout>

            <ImageView
                android:id="@+id/new_item"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_add_circle_black_80dp"/>

            <include layout="@layout/item_sign_view"/>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>